--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "start": "npm run dev & npm run sass"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.5.0"
@@ -26,6 +28,8 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "sass": "^1.86.3",
-    "vite": "^6.2.6"
+    "vite": "^6.2.6",
+    "vite-plugin-aliases": "^0.0.1"
   }
+
 }
