modalWindow: Add modal window functionality and styling

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "npm run dev & npm run sass"
+    "start": "concurrently \"npm run dev\" \"npm run sass\""
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
@@ -23,13 +23,12 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
+    "concurrently": "^9.1.2",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "sass": "^1.86.3",
-    "vite": "^6.2.6",
-    "vite-plugin-aliases": "^0.0.1"
+    "vite": "^6.2.6"
   }
-
 }
